--- a/config/crd/bases/chaos-mesh.org_httpchaos.yaml
+++ b/config/crd/bases/chaos-mesh.org_httpchaos.yaml
@@ -4,7 +4,7 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.2.5
+    controller-gen.kubebuilder.io/version: v0.3.0
   creationTimestamp: null
   name: httpchaos.chaos-mesh.org
 spec:
@@ -20,37 +20,27 @@ spec:
       description: HTTPChaos is the Schema for the HTTPchaos API
       properties:
         apiVersion:
-          description: 'APIVersion defines the versioned schema of this representation
-            of an object. Servers should convert recognized schemas to the latest
-            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+          description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
           type: string
         kind:
-          description: 'Kind is a string value representing the REST resource this
-            object represents. Servers may infer this from the endpoint the client
-            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+          description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
           type: string
         metadata:
           type: object
         spec:
           properties:
             action:
-              description: 'Action defines the specific pod chaos action. Supported
-                action: delay | abort | mixed Default action: delay'
+              description: 'Action defines the specific pod chaos action. Supported action: delay | abort | mixed Default action: delay'
               enum:
               - delay
               - abort
               - mixed
               type: string
             duration:
-              description: Duration represents the duration of the chaos action. It
-                is required when the action is `PodFailureAction`. A duration string
-                is a possibly signed sequence of decimal numbers, each with optional
-                fraction and a unit suffix, such as "300ms", "-1.5h" or "2h45m". Valid
-                time units are "ns", "us" (or "µs"), "ms", "s", "m", "h".
+              description: Duration represents the duration of the chaos action. It is required when the action is `PodFailureAction`. A duration string is a possibly signed sequence of decimal numbers, each with optional fraction and a unit suffix, such as "300ms", "-1.5h" or "2h45m". Valid time units are "ns", "us" (or "µs"), "ms", "s", "m", "h".
               type: string
             headers:
-              description: Specifies how the header match will be performed to route
-                the request.
+              description: Specifies how the header match will be performed to route the request.
               items:
                 properties:
                   exact_match:
@@ -76,8 +66,7 @@ spec:
                 type: object
               type: array
             mode:
-              description: 'Mode defines the mode to run chaos action. Supported mode:
-                one / all / fixed / fixed-percent / random-max-percent'
+              description: 'Mode defines the mode to run chaos action. Supported mode: one / all / fixed / fixed-percent / random-max-percent'
               enum:
               - one
               - all
@@ -86,43 +75,34 @@ spec:
               - random-max-percent
               type: string
             percent:
-              description: 'Percent defines the percentage of injection errors and
-                provides a number from 0-100. default: 100.'
+              description: 'Percent defines the percentage of injection errors and provides a number from 0-100. default: 100.'
               type: string
             scheduler:
-              description: Scheduler defines some schedule rules to control the running
-                time of the chaos experiment about pods.
+              description: Scheduler defines some schedule rules to control the running time of the chaos experiment about pods.
               properties:
                 cron:
-                  description: "Cron defines a cron job rule. \n Some rule examples:
-                    \"0 30 * * * *\" means to \"Every hour on the half hour\" \"@hourly\"
-                    \     means to \"Every hour\" \"@every 1h30m\" means to \"Every
-                    hour thirty\" \n More rule info: https://godoc.org/github.com/robfig/cron"
+                  description: "Cron defines a cron job rule. \n Some rule examples: \"0 30 * * * *\" means to \"Every hour on the half hour\" \"@hourly\"      means to \"Every hour\" \"@every 1h30m\" means to \"Every hour thirty\" \n More rule info: https://godoc.org/github.com/robfig/cron"
                   type: string
               required:
               - cron
               type: object
             selector:
-              description: Selector is used to select pods that are used to inject
-                chaos action.
+              description: Selector is used to select pods that are used to inject chaos action.
               properties:
                 annotationSelectors:
                   additionalProperties:
                     type: string
-                  description: Map of string keys and values that can be used to select
-                    objects. A selector based on annotations.
+                  description: Map of string keys and values that can be used to select objects. A selector based on annotations.
                   type: object
                 fieldSelectors:
                   additionalProperties:
                     type: string
-                  description: Map of string keys and values that can be used to select
-                    objects. A selector based on fields.
+                  description: Map of string keys and values that can be used to select objects. A selector based on fields.
                   type: object
                 labelSelectors:
                   additionalProperties:
                     type: string
-                  description: Map of string keys and values that can be used to select
-                    objects. A selector based on labels.
+                  description: Map of string keys and values that can be used to select objects. A selector based on labels.
                   type: object
                 namespaces:
                   description: Namespaces is a set of namespace to which objects belong.
@@ -132,20 +112,15 @@ spec:
                 nodeSelectors:
                   additionalProperties:
                     type: string
-                  description: Map of string keys and values that can be used to select
-                    nodes. Selector which must match a node's labels, and objects
-                    must belong to these selected nodes.
+                  description: Map of string keys and values that can be used to select nodes. Selector which must match a node's labels, and objects must belong to these selected nodes.
                   type: object
                 nodes:
-                  description: Nodes is a set of node name and objects must belong
-                    to these nodes.
+                  description: Nodes is a set of node name and objects must belong to these nodes.
                   items:
                     type: string
                   type: array
                 podPhaseSelectors:
-                  description: 'PodPhaseSelectors is a set of condition of a pod at
-                    the current time. supported value: Pending / Running / Succeeded
-                    / Failed / Unknown'
+                  description: 'PodPhaseSelectors is a set of condition of a pod at the current time. supported value: Pending / Running / Succeeded / Failed / Unknown'
                   items:
                     type: string
                   type: array
@@ -154,18 +129,11 @@ spec:
                     items:
                       type: string
                     type: array
-                  description: Pods is a map of string keys and a set values that
-                    used to select pods. The key defines the namespace which pods
-                    belong, and the each values is a set of pod names.
+                  description: Pods is a map of string keys and a set values that used to select pods. The key defines the namespace which pods belong, and the each values is a set of pod names.
                   type: object
               type: object
             value:
-              description: Value is required when the mode is set to `FixedPodMode`
-                / `FixedPercentPodMod` / `RandomMaxPercentPodMod`. If `FixedPodMode`,
-                provide an integer of pods to do chaos action. If `FixedPercentPodMod`,
-                provide a number from 0-100 to specify the percent of pods the server
-                can do chaos action. IF `RandomMaxPercentPodMod`,  provide a number
-                from 0-100 to specify the max percent of pods to do chaos action
+              description: Value is required when the mode is set to `FixedPodMode` / `FixedPercentPodMod` / `RandomMaxPercentPodMod`. If `FixedPodMode`, provide an integer of pods to do chaos action. If `FixedPercentPodMod`, provide a number from 0-100 to specify the percent of pods the server can do chaos action. IF `RandomMaxPercentPodMod`,  provide a number from 0-100 to specify the max percent of pods to do chaos action
               type: string
           required:
           - action
@@ -183,21 +151,18 @@ spec:
                   format: date-time
                   type: string
                 phase:
-                  description: ExperimentPhase is the current status of chaos experiment.
+                  description: ExperimentPhase is the current phase of chaos experiment.
                   type: string
                 podRecords:
                   items:
-                    description: PodStatus represents information about the status
-                      of a pod in chaos experiment.
+                    description: PodStatus represents information about the status of a pod in chaos experiment.
                     properties:
                       action:
                         type: string
                       hostIP:
                         type: string
                       message:
-                        description: A brief CamelCase message indicating details
-                          about the chaos action. e.g. "delete this pod" or "pause
-                          this pod duration 5m"
+                        description: A brief CamelCase message indicating details about the chaos action. e.g. "delete this pod" or "pause this pod duration 5m"
                         type: string
                       name:
                         type: string
