--- a/config/crd/bases/chaos-mesh.org_podiochaos.yaml
+++ b/config/crd/bases/chaos-mesh.org_podiochaos.yaml
@@ -4,7 +4,7 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.2.5
+    controller-gen.kubebuilder.io/version: v0.3.0
   creationTimestamp: null
   name: podiochaos.chaos-mesh.org
 spec:
@@ -20,14 +20,10 @@ spec:
       description: PodIoChaos is the Schema for the podiochaos API
       properties:
         apiVersion:
-          description: 'APIVersion defines the versioned schema of this representation
-            of an object. Servers should convert recognized schemas to the latest
-            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+          description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
           type: string
         kind:
-          description: 'Kind is a string value representing the REST resource this
-            object represents. Servers may infer this from the endpoint the client
-            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+          description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
           type: string
         metadata:
           type: object
@@ -71,8 +67,7 @@ spec:
                   faults:
                     description: Faults represents the fault to inject
                     items:
-                      description: IoFault represents the fault to inject and their
-                        weight
+                      description: IoFault represents the fault to inject and their weight
                       properties:
                         errno:
                           format: int32
@@ -98,8 +93,7 @@ spec:
                     description: Latency represents the latency to inject
                     type: string
                   methods:
-                    description: Methods represents the method that the action will
-                      inject in
+                    description: Methods represents the method that the action will inject in
                     items:
                       type: string
                     type: array
@@ -123,8 +117,7 @@ spec:
                     description: Path represents a glob of injecting path
                     type: string
                   percent:
-                    description: Percent represents the percent probability of injecting
-                      this action
+                    description: Percent represents the percent probability of injecting this action
                     type: integer
                   perm:
                     type: integer
@@ -158,10 +151,7 @@ spec:
               format: int64
               type: integer
             volumeMountPath:
-              description: 'VolumeMountPath represents the target mount path It must
-                be a root of mount path now. TODO: search the mount parent of any
-                path automatically. TODO: support multiple different volume mount
-                path in one pod'
+              description: 'VolumeMountPath represents the target mount path It must be a root of mount path now. TODO: search the mount parent of any path automatically. TODO: support multiple different volume mount path in one pod'
               type: string
           required:
           - volumeMountPath
